Released on 11/12/2012 to production at U of R